--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Project5_2</string>
+
+    <string name="edit_hint1">숫자1 입력</string>
+    <string name="edit_hint2">숫자2 입력</string>
+
+    <string name="btn_plus">더하기</string>
+    <string name="btn_minus">빼기</string>
+    <string name="btn_mulit">곱하기</string>
+    <string name="btn_divide">나누기</string>
+
+    <string name="text_result">계산 결과 : </string>
 </resources>
