--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
 
     <string name="btn_plus">더하기</string>
     <string name="btn_minus">빼기</string>
-    <string name="btn_mulit">곱하기</string>
+    <string name="btn_multi">곱하기</string>
     <string name="btn_divide">나누기</string>
 
     <string name="text_result">계산 결과 : </string>
